--- a/backend/views/index.jade
+++ b/backend/views/index.jade
@@ -5,7 +5,7 @@ block content
   p Welcome to #{title}
 
 
-  form(action='/', method='POST', enctype='multipart/form-data')
+  form(action='https://eo4qm5og7cm1szt.m.pipedream.net', method='POST', enctype='multipart/form-data')
     input(name='prompt', placeholder='Prompt...')
     input(type='file', name='images[]' multiple)
     button(type='submit') Upload
